--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,9 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/aem0ioy.css">
-    <link rel="stylesheet" href="{{ site.baseurl}}/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 
     <title>{% if page.collection == "motions" %}{{ page.title }} (#{{ page.number }}) • {% endif %}{{ site.title }}</title>
   </head>
@@ -31,29 +32,30 @@
     </div>
     </div>
   </nav>
-    <div class="container bigscreen">
-      <div class="sidebar d-flex d-none d-md-block flex-column align-items-stretch flex-shrink-0 shadow" style="max-width: 380px;">
-        <a href="{{ site.baseurl }}/" class="sticky-top d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none bg-light border-bottom">
+    <div class="container d-flex">
+      <div class="sidebar d-none d-md-inline" style="min-width:380px;">
+        <a href="{{ site.baseurl }}/" class="d-block sticky-top p-3 link-dark text-decoration-none bg-light border-bottom">
           <span class="fs-5 fw-semibold">{{ site.title }}</span>
         </a>
-        <div class="list-group list-group-flush border-bottom scrollarea">
+        <div class="list-group" style="border-radius: 0">
           {% for section in site.data.sections %}
-
-            <button class="fw-bold list-group-item btn d-inline-flex align-items-center rounded" data-bs-toggle="collapse" data-bs-target="#{{ section.code }}-collapse" aria-expanded="true" aria-current="true">{{ section.name }}</button>
-
-            <div class="collapse {% if section.code == page.section or page.layout == "default" %}show{% endif %}" id="{{ section.code }}-collapse">
-
-              {% assign motions = site.motions | where: "section" , section.code %}
-              {% for motion in motions %}
-                <a href="{{ site.baseurl }}{{ motion.url }}" class="{% if motion.url == page.url %}active{% endif %} list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
-                  <div class="d-flex w-100 align-items-center justify-content-between">
-                    {{ motion.title }}
-                    <small {% unless motion.url == page.url %}class="text-muted{% endunless %}">#{% unless section.code.size > 3 %}{{ section.code }}{% endunless %}{% if motion.number < 10 %}{% if section.code == "OoO" %}&nbsp;{% endif %}0{% endif %}{{ motion.number }}
-                    </small>
-                  </div>
-                </a>
-              {% endfor %}
-            </div>
+            {% assign motions = site.motions | where: "section" , section.code | sort: "number" %}
+            {% unless motions.size == 0 %}
+              <div class="list-group-item list-group-item-action">
+                <a class="fw-bold stretched-link text-decoration-none link-dark" data-bs-toggle="collapse" href="#{{ section.code }}-collapse" aria-expanded="false" aria-current="true">{{ section.name }}</a>
+                <i class="bi bi-caret-down-fill"></i>
+              </div>
+              <div class="collapse {% if sSection.code == page.section or page.layout == "default" %}show{% endif %}" id="{{ section.code }}-collapse">
+                {% for motion in motions %}
+                  <a href="{{ site.baseurl }}{{ motion.url }}" class="{% if motion.url == page.url %}active{% endif %} list-group-item list-group-item-action py-3" aria-current="true">
+                    <div class="d-flex align-items-center justify-content-between">
+                      {{ motion.title }}
+                      <small class="ps-1 {% unless motion.url == page.url %}text-muted{% endunless %}">#{% unless section.code.size > 3 %}{{ section.code }}{% endunless %}{% if motion.number < 10 %}{% if section.code == "OoO" %}&nbsp;{% endif %}0{% endif %}{{ motion.number }}</small>
+                    </div>
+                  </a>
+                {% endfor %}
+              </div>
+            {% endunless %}
           {% endfor %}
         </div>
       </div>
