--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,26 +14,34 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow d-md-none d-block p-2">
-    <div class="container-fluid">
-      <a href="{{ site.baseurl }}/" class="navbar-brand fs-5 fw-semibold link-dark text-decoration-none fw-semibold">{{ site.title }}<a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggle" aria-controls="toggle" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="toggle">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          {% assign motionlist = site.motions | sort: 'number' %}
-          {% for motion in motionlist %}
-          <li class="nav-item">
-            <a class="{% if motion.url == page.url %}text-primary{% endif %} nav-link" href="{{ site.baseurl }}{{ motion.url }}">#{{ motion.number }}: {{ motion.title }}</a>
-            <strong class="mb-1"></strong>
-          </li>
+      <div class="container-fluid">
+        <a href="{{ site.baseurl }}/" class="navbar-brand fs-5 fw-semibold link-dark text-decoration-none fw-semibold">{{ site.title }}<a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="toggle" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
+    <div class="offcanvas offcanvas-start d-md-none" id="offcanvas">
+      <div class="offcanvas-header">
+        <h2>{{ site.title }}</h2>
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+          {% for section in site.data.sections %}
+            {% assign motions = site.motions | where: "section" , section.code | sort: "number" %}
+            {% unless motions.size == 0 %}
+              <h5 class="fw-bold">{{ section.name }}</h5>
+              <ul class="list-unstyled">
+                {% for motion in motions %}
+                  <li class="lh-sm my-2"><a href="{{ site.baseurl }}{{ motion.url }}" class="link-dark text-decoration-none"><span class="fw-bold">#{% unless section.code.size > 3 %}{{ section.code }}{% endunless %}{% if motion.number < 10 %}{% if section.code == "OoO" %}&nbsp;{% endif %}0{% endif %}{{ motion.number }}</span> {{ motion.title }}</a></li>
+                {% endfor %}
+              </ul>
+            {% endunless %}
           {% endfor %}
-        </ul>
-    </div>
-    </div>
-  </nav>
+        </div>
+      </div>
     <div class="container d-flex">
-      <div class="sidebar d-none d-md-inline" style="min-width:380px;">
+      <div class="sidebar d-none d-md-inline" id="offcanvas" style="min-width:380px;">
         <a href="{{ site.baseurl }}/" class="d-block sticky-top p-3 link-dark text-decoration-none bg-light border-bottom">
           <span class="fs-5 fw-semibold">{{ site.title }}</span>
         </a>
@@ -45,7 +53,7 @@
                 <a class="fw-bold stretched-link text-decoration-none link-dark" data-bs-toggle="collapse" href="#{{ section.code }}-collapse" aria-expanded="false" aria-current="true">{{ section.name }}</a>
                 <i class="bi bi-caret-down-fill"></i>
               </div>
-              <div class="collapse {% if sSection.code == page.section or page.layout == "default" %}show{% endif %}" id="{{ section.code }}-collapse">
+              <div class="collapse {% if section.code == page.section or page.layout == "default" %}show{% endif %}" id="{{ section.code }}-collapse">
                 {% for motion in motions %}
                   <a href="{{ site.baseurl }}{{ motion.url }}" class="{% if motion.url == page.url %}active{% endif %} list-group-item list-group-item-action py-3" aria-current="true">
                     <div class="d-flex align-items-center justify-content-between">
