First draft sections and numbering.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
           {% endfor %}
         </div>
       </div>
-      <div class="content mt-5 ms-md-5">
+      <div class="content my-5 ms-md-5">
         {{ content }}
       </div>
     </div>
