--- a/_layouts/motion.html
+++ b/_layouts/motion.html
@@ -59,6 +59,8 @@ layout: default
 
 {{ content }}
 
+{% assign amendments = site.amendments | where:"motion_title",page.title %}
+
 <p class="text-muted">Last updated on {{ site.time | date: "%Y-%m-%d at %H:%M" }}</p>
 
 <a href="{{ page.spaces }}"><button type="button" class="btn btn-outline-success btn-center">View on Green Spaces</button></a>
