--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,49 +8,76 @@
     <link rel="stylesheet" href="https://use.typekit.net/aem0ioy.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <style>.amendment{padding:1.25rem;margin-top:1.25rem;margin-bottom:1.25rem;border:1px solid #e9ecef;border-left-width:.25rem;border-radius:.25rem;border-left-color:#198754}.amendment h4{margin-bottom:.25rem}.amendment p:last-child{margin-bottom:0}.amendment+.amendment{margin-top:-.25rem}</style></head>
+    <style>.amendment{padding:1.25rem;margin-top:1.25rem;margin-bottom:1.25rem;border:1px solid #e9ecef;border-left-width:.25rem;border-radius:.25rem;border-left-color:#198754}.amendment h4{margin-bottom:.25rem}.amendment p:last-child{margin-bottom:0}.amendment+.amendment{margin-top:-.25rem}</style>
+    <style>
+      h1, .navbar-brand {
+      /* font-family: "Bebas Neue", sans-serif */
+      }
+      .navbar-brand {
+      /*  font-size:2em; */
+      }
+    </style>
+  </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow d-md-none d-block p-2">
-      <div class="container-fluid">
-        <a href="{{ site.baseurl }}/" class="navbar-brand fs-5 fw-semibold link-dark text-decoration-none fw-semibold">{{ site.title }}<a>
+
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top shadow-sm" style="background-color:#006341">
+      <div class="container">
+        <a class="navbar-brand p-0" href="{{ site.baseurl }}/"><!--<img height="50" class="pe-1 d-inline-block align-text-center" src="{{ site.baseurl }}/css/gpew-logo.png">-->{{ site.title }}<a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="toggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      </div>
+        <div class="collapse navbar-collapse">
+          {% include toc.html html=content h_min=3 class="navbar-nav.me-auto.mb-2.mb-lg-0" item_class="nav-item.navbar-nav" anchor_class="nav-link" %}
+          <!-- <form class="d-flex">
+            <input id="search-searchbar" class="form-control me-2" type="search" aria-label="Search">
+          </form> -->
+        </div>
+    </div>
     </nav>
+
     <div class="offcanvas offcanvas-start d-md-none" id="offcanvas">
       <div class="offcanvas-header">
         <h2>{{ site.title }}</h2>
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
-          {% for section in site.data.sections %}
-            {% assign motions = site.motions | where: "section" , section.code | sort: "number" %}
-            {% unless motions.size == 0 %}
-              <h5 class="fw-bold">{{ section.name }}</h5>
-              <ul class="list-unstyled">
-                {% for motion in motions %}
-                  <li class="lh-sm my-2"><a href="{{ site.baseurl }}{{ motion.url }}" class="link-dark text-decoration-none"><span class="fw-bold">#{% unless section.code.size > 3 %}{{ section.code }}{% endunless %}{% if motion.number < 10 %}{% if section.code == "OoO" %}&nbsp;{% endif %}0{% endif %}{{ motion.number }}</span> {{ motion.title }}</a></li>
-                {% endfor %}
-              </ul>
-            {% endunless %}
-          {% endfor %}
+        <div class="sidebar">
+          <div class="list-group list-group-flush">
+            {% for section in site.data.sections %}
+              {% assign motions = site.motions | where: "section" , section.code | sort: "number" %}
+              {% unless motions.size == 0 %}
+                <div class="list-group-item list-group-item-action">
+                  <a class="fw-bold stretched-link text-decoration-none link-dark" data-bs-toggle="collapse" href="#{{ section.code }}-collapse" aria-expanded="false" aria-current="true">{{ section.name }}</a>
+                  <i class="bi bi-caret-down-fill"></i>
+                </div>
+                <div class="collapse {% if section.code == page.section %}show{% endif %}" id="{{ section.code }}-collapse">
+                  {% for motion in motions %}
+                    <a href="{{ site.baseurl }}{{ motion.url }}" class="{% if motion.url == page.url %}active{% endif %} list-group-item list-group-item-action py-3" aria-current="true">
+                      <div class="d-flex align-items-center justify-content-between">
+                        {{ motion.title }}
+                        <small class="ps-1 {% unless motion.url == page.url %}text-muted{% endunless %}">#{% unless section.code.size > 3 %}{{ section.code }}{% endunless %}{% if section.code.size > 1 %}&nbsp;{% endif %}{% if motion.number < 10 %}0{% endif %}{{ motion.number }}</small>
+                      </div>
+                    </a>
+                  {% endfor %}
+                </div>
+              {% endunless %}
+            {% endfor %}
+          </div>
         </div>
       </div>
+    </div>
+
     <div class="container d-flex">
-      <div class="sidebar d-none d-md-inline" id="offcanvas" style="min-width:380px;">
-        <a href="{{ site.baseurl }}/" class="d-block sticky-top p-3 link-dark text-decoration-none bg-light border-bottom">
-          <span class="fs-5 fw-semibold">{{ site.title }}</span>
-        </a>
-        <div class="list-group" style="border-radius: 0">
+      <div class="sidebar d-none d-md-inline" style="min-width:380px;">
+        <div class="list-group" style="border-top:0; border-radius:0;">
           {% for section in site.data.sections %}
             {% assign motions = site.motions | where: "section" , section.code | sort: "number" %}
             {% unless motions.size == 0 %}
-              <div class="list-group-item list-group-item-action">
+              <div class="list-group-item list-group-item-action" style="border-top:0">
                 <a class="fw-bold stretched-link text-decoration-none link-dark" data-bs-toggle="collapse" href="#{{ section.code }}-collapse" aria-expanded="false" aria-current="true">{{ section.name }}</a>
                 <i class="bi bi-caret-down-fill"></i>
               </div>
-              <div class="collapse {% if section.code == page.section or page.layout == "default" %}show{% endif %}" id="{{ section.code }}-collapse">
+              <div class="collapse {% if section.code == page.section %}show{% endif %}" id="{{ section.code }}-collapse">
                 {% for motion in motions %}
                   <a href="{{ site.baseurl }}{{ motion.url }}" class="{% if motion.url == page.url %}active{% endif %} list-group-item list-group-item-action py-3" aria-current="true">
                     <div class="d-flex align-items-center justify-content-between">
@@ -64,9 +91,12 @@
           {% endfor %}
         </div>
       </div>
-      <div class="content my-5 ms-md-5">
+      <div class="content my-3 ms-md-5">
+        <!-- <div id="search-hits"></div> -->
         {{ content }}
       </div>
     </div>
+
+    {% include algolia.html %}
   </body>
 </html>
