--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,25 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% if page.collection == "motions" %}{{ page.title }} (#{{ page.number }}) • {% endif %}{{ site.title }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/aem0ioy.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <style>.amendment{padding:1.25rem;margin-top:1.25rem;margin-bottom:1.25rem;border:1px solid #e9ecef;border-left-width:.25rem;border-radius:.25rem;border-left-color:#198754}.amendment h4{margin-bottom:.25rem}.amendment p:last-child{margin-bottom:0}.amendment+.amendment{margin-top:-.25rem}</style>
-    <style>
-      h1, .navbar-brand {
-      /* font-family: "Bebas Neue", sans-serif */
-      }
-      .navbar-brand {
-      /*  font-size:2em; */
-      }
-    </style>
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   </head>
   <body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top shadow-sm" style="background-color:#006341">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary sticky-top shadow-sm">
       <div class="container">
-        <a class="navbar-brand p-0" href="{{ site.baseurl }}/"><!--<img height="50" class="pe-1 d-inline-block align-text-center" src="{{ site.baseurl }}/css/gpew-logo.png">-->{{ site.title }}<a>
+        <a class="navbar-brand p-0" href="{{ site.baseurl }}/"><img height="50" class="pe-1 d-inline-block align-text-center" src="{{ site.baseurl }}/css/gpew-logo.png">{{ site.title }}<a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="toggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -97,6 +89,7 @@
       </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     {% include algolia.html %}
   </body>
 </html>
