Better "passed" colour

--- a/_layouts/motion.html
+++ b/_layouts/motion.html
@@ -38,7 +38,7 @@ layout: default
     {% assign styles = "bg-light text-dark" %}
     {% assign label = "Not Yet Debated" %}
   {% when "passed" %}
-    {% assign styles = "bg-success text-light" %}
+    {% assign styles = "bg-primary text-light" %}
     {% assign label = "Motion passed" %}
   {% when "defeated" %}
     {% assign styles = "bg-danger text-light" %}
