--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,8 +1,48 @@
 $primary: #6AB023;
 $secondary: #006341;
 
-@import "C:/Ruby27/lib/ruby/gems/2.7.0/gems/bootstrap-5.1.3/assets/stylesheets/_bootstrap";
+@import "C:/Ruby27/lib/ruby/gems/2.7.0/gems/bootstrap-5.1.3/assets/stylesheets/_bootstrap"; // I'm pretty sure there's supposed to be a better way to import this now I have the gem...
 
+.motions .btn[aria-expanded="true"]::before {
+  transform: rotate(90deg);
+}
+
+
+.motions {
+  .btn {
+    &::before{
+    	width: 1.25em;
+    	line-height: 0;
+    	content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+      transition: transform 0.35s ease;
+    	transform-origin: .5em 50%;
+    }
+    &:hover {
+      background-color: rgba(121,82,179,0.1);
+    }
+    &:focus{
+      background-color: rgba(121,82,179,0.1);
+      border: 1px solid $primary;
+      box-shadow: none;
+    }
+  }
+  a {
+    color: rgba(0,0,0,0.65);
+    text-decoration: none;
+  }
+  .inner li {
+    padding: .1875rem .5rem;
+    margin-top: .125rem;
+    margin-left: 1.25rem;
+    .active {
+      font-weight:600;
+    }
+    &:hover {
+      color: rgba(0,0,0,0.85);
+      background-color: rgba(121,82,179,0.1);
+    }
+  }
+}
 
 .amendment {
   padding:1.25rem;
