--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,12 +3,8 @@ $secondary: #006341;
 
 @import "C:/Ruby27/lib/ruby/gems/2.7.0/gems/bootstrap-5.1.3/assets/stylesheets/_bootstrap"; // I'm pretty sure there's supposed to be a better way to import this now I have the gem...
 
-.motions .btn[aria-expanded="true"]::before {
-  transform: rotate(90deg);
-}
 
-
-.motions {
+.sidebar {
   .btn {
     &::before{
     	width: 1.25em;
@@ -16,6 +12,9 @@ $secondary: #006341;
     	content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
       transition: transform 0.35s ease;
     	transform-origin: .5em 50%;
+    }
+    &[aria-expanded="true"]::before {
+      transform: rotate(90deg);
     }
     &:hover {
       background-color: rgba(121,82,179,0.1);
