--- a/_layouts/motion.html
+++ b/_layouts/motion.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h2 class="small text-muted">Motion #{{ page.number }}</h2>
+<h2 class="small text-muted">Motion #{% unless page.section.size > 3 %}{{ page.section }}{% endunless %}{% if page.section.size > 1 %}&nbsp;{% endif %}{% if page.number < 10 %}0{% endif %}{{ page.number }}</h2>
 <h1>{{ page.title }}</h1>
 
 {% if page.affiliated == true %}
