--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,25 +1,8 @@
 <!doctype html>
 <html class="h-100" lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% if page.collection == "motions" %}{{ page.title }} (#{{ page.number }}) • {% endif %}{{ site.title }}</title>
-    <link rel="apple-touch-icon" sizes="76x76" href="/css/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/css/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/css/icons/favicon-16x16.png">
-    <link rel="manifest" href="/css/icons/site.webmanifest">
-    <link rel="mask-icon" href="/css/icons/safari-pinned-tab.svg" color="#006341">
-    <link rel="shortcut icon" href="/css/icons/favicon.ico">
-    <meta name="msapplication-TileColor" content="#00a300">
-    <meta name="msapplication-config" content="/css/icons/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.typekit.net/aem0ioy.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
-  </head>
+
+  {% include head.html %}
+  
   <body class="d-flex flex-column h-100">
     <nav class="navbar navbar-expand-lg navbar-dark bg-secondary sticky-top shadow-sm">
       <div class="container">
