--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse">
-          {% include toc.html html=content h_min=3 class="navbar-nav.me-auto.mb-2.mb-lg-0" item_class="nav-item.navbar-nav" anchor_class="nav-link" %}
+          {% include toc.html html=content h_min=3 class="navbar-nav" anchor_class="nav-link" %}
           <form class="d-flex">
             <!-- <input id="search-searchbar" class="form-control" type="search" aria-label="Search"> -->
           </form>
