Better structured head.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,20 +1,26 @@
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{% if page.collection == "motions" %}{{ page.title }} (#{{ page.number }}) • {% endif %}{{ site.title }}</title>
-  <link rel="apple-touch-icon" sizes="76x76" href="{{ site.baseurl}}/assets/css/icons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl}}/assets/css/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl}}/assets/css/icons/favicon-16x16.png">
-  <link rel="manifest" href="{{ site.baseurl}}/assets/css/icons/site.webmanifest">
-  <link rel="mask-icon" href="{{ site.baseurl}}/assets/css/icons/safari-pinned-tab.svg" color="#006341">
-  <link rel="shortcut icon" href="{{ site.baseurl}}/assets/css/icons/favicon.ico">
-  <meta name="msapplication-TileColor" content="#00a300">
-  <meta name="msapplication-config" content="{{ site.baseurl}}/assets/css/icons/browserconfig.xml">
-  <meta name="theme-color" content="#ffffff">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.typekit.net/aem0ioy.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
-</head>
+    <!-- Required -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{% if page.collection == "motions" %}{{ page.title }} (#{{ page.number }}) • {% endif %}{{ site.title }}</title>
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="76x76" href="{{ site.baseurl}}/assets/css/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl}}/assets/css/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl}}/assets/css/icons/favicon-16x16.png">
+    <link rel="manifest" href="{{ site.baseurl}}/assets/css/icons/site.webmanifest">
+    <link rel="mask-icon" href="{{ site.baseurl}}/assets/css/icons/safari-pinned-tab.svg" color="#006341">
+    <link rel="shortcut icon" href="{{ site.baseurl}}/assets/css/icons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#00a300">
+    <meta name="msapplication-config" content="{{ site.baseurl}}/assets/css/icons/browserconfig.xml">
+    <meta name="theme-color" content="#00a300">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
+    <!-- Styles (including Bootstrap) -->
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+  </head>
