Fixed #20 by removing flex option from wrapper container.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
       </div>
     </div>
 
-    <div class="container d-flex my-3">
+    <div class="container my-3">
       <div class="row">
         <div class="col-md-4 d-none d-md-block">
           {% include sidebar-motions.html %}
