Fixed offcanvas backdrop showing when sized up.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -157,3 +157,10 @@ h1, .navbar-brand {
 h3 {
   scroll-margin-top: 5rem;
 }
+
+@include media-breakpoint-up(md) {
+  .offcanvas-backdrop.show
+  {
+      display:none;
+  }
+}
