--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
       </div>
     </nav>
 
-    <div class="offcanvas offcanvas-start d-md-none" id="offcanvas">
+    <div class="offcanvas offcanvas-start d-md-none" data-bs-scroll="true" id="offcanvas">
       <div class="offcanvas-header">
         <!-- <input id="search-searchbar" class="form-control" type="search" aria-label="Search"> -->
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
