--- a/_layouts/motion.html
+++ b/_layouts/motion.html
@@ -52,5 +52,5 @@ layout: default
 
 <div class="info mb-3">
   <p class="text-muted">Last updated on {{ site.time | date: "%Y-%m-%d at %H:%M" }}</p>
-  <a href="{{ page.spaces }}"><button type="button" class="btn btn-primary text-light btn-center">View on Green Spaces</button></a>
+  <a href="{{ page.spaces }}"><button type="button" class="btn btn-outline-primary btn-center">View on Green Spaces</button></a>
 </div>
