--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,10 @@
       </div>
     </nav>
 
-    <div class="horizontal-scrollable secondary-nav shadow-sm py-2 px-3 d-lg-none">
-      {% include toc.html html=content h_min=3 class="list-inline.m-0" item_class="list-inline-item" anchor_class="text-decoration-none.btn.btn-outline-primary.rounded-pill" %}
+    <div> <!-- This has to be here to make the secondary navbar work. Unsure why.  -->
+      <div class="secondary-nav shadow-sm d-lg-none">
+        {% include toc.html html=content h_min=3 class="ps-3.py-2.list-inline.m-0" item_class="list-inline-item" anchor_class="text-decoration-none.btn.btn-outline-primary.rounded-pill" %}
+      </div>
     </div>
 
     <div class="offcanvas offcanvas-start d-md-none" data-bs-scroll="true" id="offcanvas">
