Added mission section F to data, and added empty section displays

--- a/_includes/sidebar-motions.html
+++ b/_includes/sidebar-motions.html
@@ -17,6 +17,12 @@
           </ul>
         </div>
       </li>
+    {% else %}
+    <li class="mb-1">
+      <button class="btn disabled d-inline-flex align-items-center rounded" disabled>{{ section.name }} (empty)</button>
+    </li>
     {% endunless %}
+
+
   {% endfor %}
 </ul>
