--- a/_layouts/motion.html
+++ b/_layouts/motion.html
@@ -37,7 +37,7 @@ layout: default
 {% endcase %}
 
 <!-- Page starts -->
-<h2 class="small text-muted">Motion #{% unless page.section.size > 3 %}{{ page.section }}{% endunless %}{% if page.section.size > 1 %}&nbsp;{% endif %}{% if page.number < 10 %}0{% endif %}{{ page.number }}</h2>
+<p class="m-0 small text-muted">Motion #{% unless page.section.size > 3 %}{{ page.section }}{% endunless %}{% if page.section.size > 1 %}&nbsp;{% endif %}{% if page.number < 10 %}0{% endif %}{{ page.number }}</p>
 <h1>{{ page.title }}</h1>
 <div class="my-3 d-flex align-items-center justify-content-center infobox rounded text-center bg-{{ status }}" style="height: 40px">{{ label }}</div>
 
